TestSuite/PascalABCTests/errors/err0414.pas
type
  t1 = abstract class(System.Collections.IEnumerator)
    
    public property System.Collections.IEnumerator<integer>.Current: object read nil;
    
  end;
  
begin end.